# crosslingual_bert_annotation_projection

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/input/DISTEMIST-ES/: S0004-06142005000500011-1.ann  S0004-06142005000700014-1.ann  S0004-06142005000900013-1.ann  S0004-06142005000900014-1.ann  S0004-06142005000900015-1.ann  S0004-06142005000900016-1.ann  S0004-06142005001000011-1.ann  S0004-06142005001000011-3.ann  S0004-06142005001000016-1.ann  S0004-06142006000200001-1.ann  S0004-06142006000200011-1.ann  S0004-06142006000200013-1.ann  S0004-06142006000200014-1.ann  S0004-06142006000300015-1.ann  S0004-06142006000500002-4.ann  S0004-06142006000500011-1.ann  S0004-06142006000500012-1.ann  S0004-06142006000600009-1.ann  S0004-06142006000600012-1.ann  S0004-06142006000600014-1.ann  S0004-06142006000600015-1.ann  S0004-06142006000700008-1.ann  S0004-06142006000700011-1.ann  S0004-06142006000700012-1.ann  S0004-06142006000700013-1.ann  S0004-06142006000700014-1.ann  S0004-06142006000900006-1.ann  S0004-06142006000900008-1.ann  S0004-06142006000900009-1.ann  S0004-06142006000900013-1.ann  S0004-06142006000900014-1.ann  S0004-06142007000100011-1.ann  S0004-06142007000100012-1.ann  S0004-06142007000100015-1.ann  S0004-06142007000200011-1.ann  (+715 more)
src/app/: __init__.py
src/bert_word_alignment/: WordAlignment.py
src/labse_sentence_alignment/: __init__.py  aligner.py  corelib.py  encoder.py  utils.py
src/silver_standard_factory/: __init__.py
src/utils_io/: ann_write.py  file_read.py
src/utils_typings/: annotations.py
(+7 files in other folders)
